Add side project filter button and update portfolio item class for improved categorization in the work section.

--- a/work.html
+++ b/work.html
@@ -81,6 +81,7 @@
                 <button class="filter-btn" data-filter="brand-design">Brand Design</button>
                 <button class="filter-btn" data-filter="social-media">Social Media</button>
                 <button class="filter-btn" data-filter="development">Development</button>
+                <button class="filter-btn" data-filter="side-project">Side Project</button>
             </div>
         </div>
     </section>
@@ -531,7 +532,7 @@
                 </article>
 
                 <!-- Side Projects Section -->
-                <article class="portfolio-item side-project" data-category="web-design">
+                <article class="portfolio-item side-project" data-category="web-design side-project">
                     <div class="portfolio-image">
                         <div class="image-placeholder" style="background: linear-gradient(135deg, #10b981 0%, #34d399 100%);"></div>
                         <div class="portfolio-overlay">
